# betfair-dashboard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Results.ipynb  bdash_cli.py  bdash_drawdowns.py  bdash_ingest.py  betfair_dashboard_STABLE_2025_08_10.ipynb  gitignore  pyproject.toml  requirements.txt  update_sheets.py
bdash/: __init__.py  cli.py  ingest.py
scripts/: dashboard_charts.gs
